{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 24,
  "lineage": "e2a1f053-45d1-b721-8214-0294129726fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446539779517:internet-gateway/igw-0cbfad74a3cdc049c",
            "id": "igw-0cbfad74a3cdc049c",
            "owner_id": "446539779517",
            "tags": {
              "Name": "Davinder_VPC_IGW"
            },
            "tags_all": {
              "Name": "Davinder_VPC_IGW"
            },
            "vpc_id": "vpc-04d34d31978ada0c8"
          },
          "dependencies": [
            "aws_vpc.davinder-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446539779517:route-table/rtb-00d28f855d78b8d0a",
            "id": "rtb-00d28f855d78b8d0a",
            "owner_id": "446539779517",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cbfad74a3cdc049c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Davinder_VPC_RT"
            },
            "tags_all": {
              "Name": "Davinder_VPC_RT"
            },
            "vpc_id": "vpc-04d34d31978ada0c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.davinder-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066eb8ff5a0dfc9a4",
            "route_table_id": "rtb-00d28f855d78b8d0a",
            "subnet_id": "subnet-0df9c7ff0d2a955f1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_RT",
            "aws_subnet.public-subnet",
            "aws_vpc.davinder-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446539779517:security-group/sg-0eec307f0dfe90d5d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound allowed all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eec307f0dfe90d5d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Davinder_SG",
            "name_prefix": "",
            "owner_id": "446539779517",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04d34d31978ada0c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.davinder-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446539779517:subnet/subnet-0df9c7ff0d2a955f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0df9c7ff0d2a955f1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446539779517",
            "tags": {
              "Name": "Davinder_Public-subnet",
              "X-Contact": "davinder.singh@progress.com",
              "X-Customer": "Internal",
              "X-Dept": "CA",
              "X-Project": "Learning",
              "X-TTL": "4days"
            },
            "tags_all": {
              "Name": "Davinder_Public-subnet",
              "X-Contact": "davinder.singh@progress.com",
              "X-Customer": "Internal",
              "X-Dept": "CA",
              "X-Project": "Learning",
              "X-TTL": "4days"
            },
            "vpc_id": "vpc-04d34d31978ada0c8"
          },
          "dependencies": [
            "aws_vpc.davinder-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "davinder-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446539779517:vpc/vpc-04d34d31978ada0c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09821d061dc7defa5",
            "default_route_table_id": "rtb-0eee3d4338870079d",
            "default_security_group_id": "sg-0ac101c31d3d1497f",
            "dhcp_options_id": "dopt-f8a24c9d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04d34d31978ada0c8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eee3d4338870079d",
            "owner_id": "446539779517",
            "tags": {
              "Name": "davinder-VPC",
              "X-Contact": "davinder.singh@progress.com",
              "X-Customer": "Internal",
              "X-Dept": "CA",
              "X-Project": "Learning",
              "X-TTL": "4days"
            },
            "tags_all": {
              "Name": "davinder-VPC",
              "X-Contact": "davinder.singh@progress.com",
              "X-Customer": "Internal",
              "X-Dept": "CA",
              "X-Project": "Learning",
              "X-TTL": "4days"
            }
          }
        }
      ]
    }
  ]
}